--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,6 @@ DATABASE_PASSWORD=DATABASE_PASSWORD
 
 TOKEN_SECRET=TOKEN_SECRET_JWT
 TOKEN_EXPIRATION=TOKEN_EXPIRATION
+
+APP_URL=APP_URL
+APP_PORT=APP_PORT
